test/negative/grammar/n_circularity_in_subclafers.cfr
// Tests circularity of subclafers of abstract clafers
//
// Expected Output: Circularity Error?
//
// Current Output:
//   Infinite Loop

abstract A
  b : B

abstract B
  a : A

x : A